<resources>
    <string name="app_name">Joon\'s Android Portfolio</string>

    <string name="app_message">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonApp1">Spotify Streamer</string>
    <string name="buttonApp2">Scores App</string>
    <string name="buttonApp3">Library App</string>
    <string name="buttonApp4">Build It Bigger</string>
    <string name="buttonApp5">XYZ Reader</string>
    <string name="buttonApp6">Capstone: My Own App</string>
    <string name="launchMessage">This button will launch %1$s!</string>

    <color name="colorRed">#c4063c</color>
    <color name="colorOrange">#f08c35</color>
    <color name="colorBlueLight">#e0eaf1</color>
    <color name="colorBlack">#000</color>
</resources>
