<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueLight"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/app_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/activity_title_textSize"
        android:paddingBottom="@dimen/activity_title_margin"
        android:paddingTop="@dimen/activity_title_margin"
        android:id="@+id/textView" />

    <Button
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonApp1"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorOrange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="showToast"/>

    <Button
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonApp2"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorOrange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="showToast"/>

    <Button
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonApp3"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorOrange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="showToast"/>

    <Button
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonApp4"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorOrange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="showToast"/>

    <Button
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonApp5"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorOrange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="showToast"/>

    <Button
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonApp6"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@android:color/white"
        android:background="@color/colorRed"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="showToast"/>

</LinearLayout>